syntax = "proto3";

// 指定生成文件的目录
option go_package = "./hello";

service SayHello{
  rpc SayHello(HelloReq) returns (HelloResp);
}

message HelloReq{
  string name = 1;
}

message HelloResp{
  string msg = 1;
}